# Bifrost

./: .env.example  .gitignore  BIFROST_CONTEXT.md  BIFROST_DEMO_INTEGRATION_PLAN.md  BIFROST_FEATURES.md  BIFROST_GOALS.md  BiFrost Export.html  MISSIONMESH_CONTEXT.md  MISSIONMESH_FEATURES.md  MISSIONMESH_GOALS.md  README.md  package.json  railway.json  skills-lock.json  tsconfig.base.json
BiFrost/: Landing.html  bifrost-missions.jsx
BiFrost/uploads/: BIFROST_FEATURES.md
BiFrost_Design/: Bifrost.html  bifrost-agents.jsx  bifrost-components.jsx  bifrost-dashboard.jsx  bifrost-styles.css
BiFrost_Design/scraps/: sketch-2026-04-24T03-24-28-s1s8jx.napkin
apps/api/: Dockerfile  package.json  tsconfig.json
apps/landing/: package.json
apps/web/: next.config.ts  package.json  r3f.d.ts  tsconfig.json  (+1 more)
convex/: agentMessages.ts  missionArtifacts.ts  missions.ts  paymentRequests.ts  registryApplications.ts  schema.ts  verificationReports.ts  waitlist.ts
program/: Cargo.toml
program/examples/: bifrost_local.rs  missionmesh_local.rs  surfpool_smoke.rs
program/src/: error.rs  event.rs  instruction.rs  lib.rs  processor.rs  utils.rs
program/src/instructions/: admin.rs  allocation.rs  common.rs  mission.rs  mod.rs  reputation.rs  spend.rs  verification.rs
program/src/state/: agent_registry.rs  agent_reputation.rs  dispute_record.rs  mission_vault.rs  mod.rs  protocol_config.rs  provider_policy.rs  spend_policy.rs  spend_receipt.rs  spend_request.rs  verifier_record.rs
program/tests/: bifrost.rs  missionmesh.rs
scripts/: seed-launch-agents.ts  tsconfig.json
(+144 files in other folders)
