[package]
name = "bifrost-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
serial_test = "3"
solana-client = "1.18"
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
